--- a/Project 2/grade_calculator/grade_calculator.ui
+++ b/Project 2/grade_calculator/grade_calculator.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1287</width>
-    <height>662</height>
+    <width>467</width>
+    <height>388</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <widget class="QRadioButton" name="radioButton">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>120</x>
       <y>10</y>
       <width>82</width>
       <height>18</height>
@@ -30,7 +30,7 @@
    <widget class="QRadioButton" name="radioButton_2">
     <property name="geometry">
      <rect>
-      <x>110</x>
+      <x>280</x>
       <y>10</y>
       <width>82</width>
       <height>18</height>
@@ -44,7 +44,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>90</y>
+      <y>40</y>
       <width>41</width>
       <height>21</height>
      </rect>
@@ -57,7 +57,7 @@
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>90</y>
+      <y>40</y>
       <width>42</width>
       <height>22</height>
      </rect>
@@ -67,7 +67,7 @@
     <property name="geometry">
      <rect>
       <x>140</x>
-      <y>90</y>
+      <y>40</y>
       <width>42</width>
       <height>22</height>
      </rect>
@@ -77,7 +77,7 @@
     <property name="geometry">
      <rect>
       <x>140</x>
-      <y>130</y>
+      <y>70</y>
       <width>42</width>
       <height>22</height>
      </rect>
@@ -87,7 +87,7 @@
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>130</y>
+      <y>70</y>
       <width>42</width>
       <height>22</height>
      </rect>
@@ -97,7 +97,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>130</y>
+      <y>70</y>
       <width>41</width>
       <height>21</height>
      </rect>
@@ -110,7 +110,7 @@
     <property name="geometry">
      <rect>
       <x>140</x>
-      <y>170</y>
+      <y>100</y>
       <width>42</width>
       <height>22</height>
      </rect>
@@ -120,7 +120,7 @@
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>170</y>
+      <y>100</y>
       <width>42</width>
       <height>22</height>
      </rect>
@@ -130,8 +130,8 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>170</y>
-      <width>41</width>
+      <y>100</y>
+      <width>31</width>
       <height>21</height>
      </rect>
     </property>
@@ -143,7 +143,7 @@
     <property name="geometry">
      <rect>
       <x>120</x>
-      <y>90</y>
+      <y>40</y>
       <width>16</width>
       <height>16</height>
      </rect>
@@ -156,7 +156,7 @@
     <property name="geometry">
      <rect>
       <x>120</x>
-      <y>130</y>
+      <y>70</y>
       <width>16</width>
       <height>16</height>
      </rect>
@@ -169,7 +169,7 @@
     <property name="geometry">
      <rect>
       <x>120</x>
-      <y>170</y>
+      <y>100</y>
       <width>16</width>
       <height>16</height>
      </rect>
@@ -181,8 +181,8 @@
    <widget class="QSpinBox" name="Midterm_Total_Score">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>260</y>
+      <x>400</x>
+      <y>70</y>
       <width>42</width>
       <height>22</height>
      </rect>
@@ -191,8 +191,8 @@
    <widget class="QSpinBox" name="Midterm_Received_Score">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>260</y>
+      <x>330</x>
+      <y>70</y>
       <width>42</width>
       <height>22</height>
      </rect>
@@ -201,8 +201,8 @@
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>260</y>
+      <x>380</x>
+      <y>70</y>
       <width>16</width>
       <height>16</height>
      </rect>
@@ -214,8 +214,8 @@
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>260</y>
+      <x>280</x>
+      <y>70</y>
       <width>41</width>
       <height>21</height>
      </rect>
@@ -227,8 +227,8 @@
    <widget class="QSpinBox" name="FinalExam_Total_Score">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>360</y>
+      <x>410</x>
+      <y>150</y>
       <width>42</width>
       <height>22</height>
      </rect>
@@ -237,8 +237,8 @@
    <widget class="QSpinBox" name="FinalExam_Received_Score">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>360</y>
+      <x>340</x>
+      <y>150</y>
       <width>42</width>
       <height>22</height>
      </rect>
@@ -247,8 +247,8 @@
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>360</y>
+      <x>390</x>
+      <y>150</y>
       <width>16</width>
       <height>16</height>
      </rect>
@@ -260,8 +260,8 @@
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>360</y>
+      <x>280</x>
+      <y>150</y>
       <width>51</width>
       <height>21</height>
      </rect>
@@ -273,8 +273,8 @@
    <widget class="QSpinBox" name="FinalProject_Total_Score">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>470</y>
+      <x>410</x>
+      <y>230</y>
       <width>42</width>
       <height>22</height>
      </rect>
@@ -283,8 +283,8 @@
    <widget class="QSpinBox" name="FinalProject_Received_Score">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>470</y>
+      <x>350</x>
+      <y>230</y>
       <width>42</width>
       <height>22</height>
      </rect>
@@ -293,8 +293,8 @@
    <widget class="QLabel" name="label_11">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>470</y>
+      <x>400</x>
+      <y>230</y>
       <width>16</width>
       <height>16</height>
      </rect>
@@ -306,8 +306,8 @@
    <widget class="QLabel" name="label_12">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>470</y>
+      <x>280</x>
+      <y>230</y>
       <width>61</width>
       <height>21</height>
      </rect>
@@ -319,8 +319,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>560</y>
+      <x>120</x>
+      <y>290</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -332,14 +332,244 @@
    <widget class="QLineEdit" name="lineEdit">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>560</y>
-      <width>113</width>
+      <x>250</x>
+      <y>290</y>
+      <width>171</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
      <string>0.0%</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="HW4_Total_Score">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>130</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="HW4_Received_Score">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>130</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_13">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>130</y>
+      <width>31</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>HW 4</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_14">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>130</y>
+      <width>16</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>/</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="HW5_Total_Score">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>160</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="HW5_Received_Score">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>160</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_15">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>160</y>
+      <width>31</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>HW 5</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_16">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>160</y>
+      <width>16</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>/</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="HW6_Total_Score">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>190</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="HW6_Received_Score">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>190</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_17">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>190</y>
+      <width>31</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>HW 6</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_18">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>190</y>
+      <width>16</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>/</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="HW7_Total_Score">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>220</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="HW7_Received_Score">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>220</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_19">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>220</y>
+      <width>31</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>HW 7</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_20">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>220</y>
+      <width>16</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>/</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="HW8_Total_Score">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>250</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="HW8_Received_Score">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>250</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_21">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>250</y>
+      <width>31</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>HW 8</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_22">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>250</y>
+      <width>16</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>/</string>
     </property>
    </widget>
   </widget>
@@ -348,7 +578,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1287</width>
+     <width>467</width>
      <height>20</height>
     </rect>
    </property>
